# james

./: LICENSE  README.md  meson.build  run_formatter.sh
extras/plot_figure/: README.md  hbond_no_hydrogens.py  hbond_with_hydrogens.py
extras/plot_figure/input/: oct.lammpstrj
james/include/: bondcorrel.hpp  bondfinder.hpp  io.hpp  pairtypes.hpp  pathfinder.hpp  system.hpp  util.hpp
subprojects/: graph_lib.wrap
subprojects/ApprovalTests/: CMakeLists.txt
subprojects/ApprovalTests/ApprovalTests/: CMakeLists.txt
test/: test_approval.cpp  test_correlation.cpp  test_dist_bonds.cpp  test_hbond.cpp  test_io.cpp  test_ion_pairs.cpp  test_pairtypes.cpp  test_system.cpp
